# remux

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: PLAN.md  RELEASING.md  STATUS.md  claude-code-hooks.md  design-chat.md  design-tap.md  shell-hooks.md  voice.md
docs/spikes/: M4.0-protocol.md
examples/: voice_smoke.rs
examples/claude-code/: README.md  remux-agent-state  remux-approve
examples/taskscope/: README.md  taskscope
packaging/: remux-cert-renew.service  remux-cert-renew.timer  remux.service
packaging/homebrew/: remux.rb
packaging/icons/: remux.icns
packaging/swiftbar/: remux.1m.sh
src/: admin.rs  agent.rs  attention.rs  auth.rs  chat.rs  config.rs  feed.rs  ingest.rs  intent.rs  lib.rs  main.rs  paneview.rs  permit.rs  push.rs  server.rs  service.rs  setup_host.rs  shell.rs  tmux.rs  topology.rs  voice.rs  ws.rs
tests/: admin.rs  http.rs  ingest.rs  paneview.rs  press.rs  push_dispatch.rs  shell.rs  tls.rs  topology.rs  ws_tmux.rs  ws_voice.rs
tests/common/: mod.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  shot.mjs  tsconfig.json  vite.config.ts
web/e2e/: terminal.spec.ts
web/public/: manifest.webmanifest  sw.js  voice-worklet.js
web/src/: keys.ts  machines.ts  main.ts  scroll.ts  style.css  term.ts
