[package]
name = "remux"
version = "0.1.0"
edition = "2021"
description = "Your persistent tmux session, on your phone."
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
dirs = "6"
hex = "0.4"
mime_guess = "2"
portable-pty = "0.9"
qrcode = { version = "0.14", default-features = false }
rand = "0.9"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.29"

[profile.release]
strip = true
lto = true
