[package]
name = "remux"
version = "0.1.0"
edition = "2021"
description = "Your persistent tmux session, on your phone."
license = "MIT"
repository = "https://github.com/jorgeamado/remux"
homepage = "https://github.com/jorgeamado/remux"
readme = "README.md"

# `cargo deb` (https://github.com/kornelski/cargo-deb) builds the .deb that
# release CI attaches to GitHub releases.
[package.metadata.deb]
maintainer = "George Lemeshko <george.lemeshko@gmail.com>"
copyright = "2026, George Lemeshko"
license-file = ["LICENSE", "0"]
depends = "tmux (>= 3.2)"
section = "utils"
priority = "optional"
extended-description = """
remux is a small self-hosted daemon that exposes your tmux session to your
own devices as a mobile-friendly web terminal (PWA), with observer/controller
device handoff, QR pairing, and attention notifications. Designed to run on
your tailnet, never on the public internet."""
assets = [
    ["target/release/remux", "usr/bin/", "755"],
    ["packaging/remux.service", "usr/lib/systemd/user/", "644"],
    ["README.md", "usr/share/doc/remux/README.md", "644"],
]

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
dirs = "6"
hex = "0.4"
mime_guess = "2"
portable-pty = "0.9"
qrcode = { version = "0.14", default-features = false }
rand = "0.9"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tokio-tungstenite = "0.29"

[profile.release]
strip = true
lto = true
